# full-domain-functional-bootstrap

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
NN/: main.cpp
NN/include/: ActivationFunctions.h  CRT.h  Dataset.h  Layer.h  Network.h  PrebuildNetworks.h  Tensor.h  Utils.h
NN/include/layers/: Activation.h  AveragePool2D.h  Convolve2D.h  Flatten.h  Linear.h  Polys.h
NN/src/: ActivationFunctions.cpp  CRT.cpp  Dataset.cpp  Network.cpp  PrebuildNetworks.cpp  Tensor.cpp  Utils.cpp
NN/src/layers/: Activation.cpp  AveragePool2D.cpp  Convolve2d.cpp  Linear.cpp
fbs/include/: definitions.h  fbscontext.h  fhew.h  lwe.h  lwecore.h  ringcore.h  ringswitching.h
fbs/src/: fbs.cpp  fbscontext.cpp  fhew.cpp  lwe.cpp  ringswitching.cpp
nn_data/MNIST_1_6/: config.json
nn_data/MNIST_1_6/dataset/: mnist_100_images.csv  mnist_100_labels.csv
nn_data/MNIST_1_6/layers/: L0_dense_B.csv  L0_dense_W.csv  L1_dense_B.csv  L1_dense_W.csv  L2_dense_B.csv  L2_dense_W.csv
nn_data/MNIST_2_4_T1/: config.json
nn_data/MNIST_2_4_T1/dataset/: mnist_100_images.csv  mnist_100_labels.csv
nn_data/MNIST_2_4_T1/layers/: L0_conv2d_W.csv  L2_conv2d_B.csv  L2_conv2d_W.csv  L4_conv2d_B.csv  L4_conv2d_W.csv  L6_dense_B.csv  L6_dense_W.csv  L7_dense_B.csv  L7_dense_W.csv
test/: main.cpp
test/include/: LUT.h  error.h  functions.h  implementation.h  setup.h
test/src/: LUT.cpp  error.cpp  functions.cpp  implementation.cpp
